--- a/Labb/Laboration_1_Medical_Prediction.ipynb
+++ b/Labb/Laboration_1_Medical_Prediction.ipynb
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1064,28 +1064,65 @@
      "output_type": "stream",
      "text": [
       "Bästa parametrar för: Random Forest Normalization (df1): {'max_depth': 8, 'min_samples_leaf': 5, 'min_samples_split': 15, 'n_estimators': 10}\n",
-      "Ny fil skapad: model_results.csv\n",
+      "Modellen 'Random Forest Normalization (df1)' finns redan i filen. Inga nya resultat sparades.\n",
       "Bästa parametrar för: Random Forest Normalization (df2): {'max_depth': 10, 'min_samples_leaf': 4, 'min_samples_split': 10, 'n_estimators': 30}\n",
-      "Nya resultat för 'Random Forest Normalization (df2)' sparades i model_results.csv.\n",
+      "Modellen 'Random Forest Normalization (df2)' finns redan i filen. Inga nya resultat sparades.\n",
       "Bästa parametrar för: Logistic Regression Normalization (df1): {'C': 0.1, 'penalty': 'l1', 'solver': 'saga'}\n",
-      "Nya resultat för 'Logistic Regression Normalization (df1)' sparades i model_results.csv.\n",
+      "Modellen 'Logistic Regression Normalization (df1)' finns redan i filen. Inga nya resultat sparades.\n",
       "Bästa parametrar för: Logistic Regression Normalization (df2): {'C': 100, 'penalty': 'l2', 'solver': 'saga'}\n",
-      "Nya resultat för 'Logistic Regression Normalization (df2)' sparades i model_results.csv.\n",
+      "Modellen 'Logistic Regression Normalization (df2)' finns redan i filen. Inga nya resultat sparades.\n",
       "Bästa parametrar för: Gradient Boosting Normalization (df1): {'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 30}\n",
-      "Nya resultat för 'Gradient Boosting Normalization (df1)' sparades i model_results.csv.\n",
+      "Modellen 'Gradient Boosting Normalization (df1)' finns redan i filen. Inga nya resultat sparades.\n",
       "Bästa parametrar för: Gradient Boosting Normalization (df2): {'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 30}\n",
-      "Nya resultat för 'Gradient Boosting Normalization (df2)' sparades i model_results.csv.\n",
+      "Modellen 'Gradient Boosting Normalization (df2)' finns redan i filen. Inga nya resultat sparades.\n",
       "Bästa parametrar för: KNN Normalization (df1): {'n_neighbors': 9, 'p': 1, 'weights': 'uniform'}\n",
-      "Nya resultat för 'KNN Normalization (df1)' sparades i model_results.csv.\n",
+      "Modellen 'KNN Normalization (df1)' finns redan i filen. Inga nya resultat sparades.\n",
       "Bästa parametrar för: KNN Normalization (df2): {'n_neighbors': 9, 'p': 1, 'weights': 'uniform'}\n",
-      "Nya resultat för 'KNN Normalization (df2)' sparades i model_results.csv.\n"
+      "Modellen 'KNN Normalization (df2)' finns redan i filen. Inga nya resultat sparades.\n"
      ]
     }
    ],
    "source": [
+    "\"\"\"\n",
     "from ml_training_model import train_and_evaluate_models\n",
     "    \n",
-    "train_and_evaluate_models(X1_train_minmax, X1_val_minmax, X1_test_minmax, X2_train_minmax, X2_val_minmax, X2_test_minmax, y1_train, y1_val, y1_test, y2_train, y2_val, y2_test)\n"
+    "train_and_evaluate_models(X1_train_minmax, X1_val_minmax, X1_test_minmax, X2_train_minmax, X2_val_minmax, X2_test_minmax, y1_train, y1_val, y1_test, y2_train, y2_val, y2_test)\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultat sparade i ensemble_model_results_df2.csv\n",
+      "\n",
+      "Resultat på testdata:\n",
+      "Random Forest noggrannhet: 0.7355\n",
+      "Logistic Regression noggrannhet: 0.7295\n",
+      "Gradient Boosting noggrannhet: 0.7378\n",
+      "KNN noggrannhet: 0.7023\n",
+      "Ensemble (Voting) noggrannhet: 0.7354\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importera ensemble-modellen\n",
+    "from Ensemble_model_df2 import train_ensemble_model_df2\n",
+    "\n",
+    "# Kombinera tränings- och valideringsdata för att träna den slutliga modellen\n",
+    "ensemble_model = train_ensemble_model_df2(\n",
+    "    X2_train_minmax, X2_val_minmax, X2_test_minmax, \n",
+    "    y2_train, y2_val, y2_test\n",
+    ")\n",
+    "\n",
+    "# Du kan nu använda ensemble_model för att göra förutsägelser på nya data\n",
+    "# Till exempel:\n",
+    "# predictions = ensemble_model.predict(new_data)"
    ]
   },
   {
@@ -1095,30 +1132,30 @@
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'X2_train_minmax' is not defined",
+     "evalue": "name 'ensemble_model' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 6\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mEnsemble_model_df2\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m create_ensemble_model\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Anropa funktionen med dina data\u001b[39;00m\n\u001b[0;32m      5\u001b[0m ensemble_model, test_accuracy \u001b[38;5;241m=\u001b[39m create_ensemble_model(\n\u001b[1;32m----> 6\u001b[0m     X_train\u001b[38;5;241m=\u001b[39m\u001b[43mX2_train_minmax\u001b[49m,\n\u001b[0;32m      7\u001b[0m     y_train\u001b[38;5;241m=\u001b[39my2_train,\n\u001b[0;32m      8\u001b[0m     X_val\u001b[38;5;241m=\u001b[39mX2_val_minmax,\n\u001b[0;32m      9\u001b[0m     y_val\u001b[38;5;241m=\u001b[39my2_val,\n\u001b[0;32m     10\u001b[0m     X_test\u001b[38;5;241m=\u001b[39mX2_test_minmax,\n\u001b[0;32m     11\u001b[0m     y_test\u001b[38;5;241m=\u001b[39my2_test,\n\u001b[0;32m     12\u001b[0m     dataset_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdf2\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     13\u001b[0m )\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'X2_train_minmax' is not defined"
+      "Cell \u001b[1;32mIn[1], line 6\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mEnsemble_model_df2\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m evaluate_models\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Anta att du redan har ensemble_model från tidigare\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Hämta Gradient Boosting-modellen (den är den tredje modellen i ensemble_model.estimators_)\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m gb_model \u001b[38;5;241m=\u001b[39m \u001b[43mensemble_model\u001b[49m\u001b[38;5;241m.\u001b[39mestimators_[\u001b[38;5;241m2\u001b[39m]\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Utvärdera endast Gradient Boosting-modellen\u001b[39;00m\n\u001b[0;32m      9\u001b[0m models \u001b[38;5;241m=\u001b[39m [gb_model]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ensemble_model' is not defined"
      ]
     }
    ],
    "source": [
-    "# Importera funktionen från Ensemble_model_df2.py\n",
-    "from Ensemble_model_df2 import create_ensemble_model\n",
+    "# Importera evaluate_models-funktionen\n",
+    "from Ensemble_model_df2 import evaluate_models\n",
     "\n",
-    "# Anropa funktionen med dina data\n",
-    "ensemble_model, test_accuracy = create_ensemble_model(\n",
-    "    X_train=X2_train_minmax,\n",
-    "    y_train=y2_train,\n",
-    "    X_val=X2_val_minmax,\n",
-    "    y_val=y2_val,\n",
-    "    X_test=X2_test_minmax,\n",
-    "    y_test=y2_test,\n",
-    "    dataset_name=\"df2\"\n",
-    ")\n"
+    "# Anta att du redan har ensemble_model från tidigare\n",
+    "# Hämta Gradient Boosting-modellen (den är den tredje modellen i ensemble_model.estimators_)\n",
+    "gb_model = ensemble_model.estimators_[2]\n",
+    "\n",
+    "# Utvärdera endast Gradient Boosting-modellen\n",
+    "models = [gb_model]\n",
+    "model_names = ['Gradient Boosting (df2)']\n",
+    "\n",
+    "# Skapa confusion matrix och classification report för Gradient Boosting\n",
+    "reports = evaluate_models(X2_test_minmax, y2_test, models, model_names)"
    ]
   }
  ],
