--- a/Lektion/kod_snuttar_labb.ipynb
+++ b/Lektion/kod_snuttar_labb.ipynb
@@ -626,6 +626,301 @@
     "        weights='uniform'\n",
     "    )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import GradientBoostingClassifier, VotingClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "import pandas as pd \n",
+    "import os\n",
+    "\n",
+    "# Ensemble modell med VotingClassifier\n",
+    "def create_ensemble_model(X2_train_minmax, y2_train, X2_val_minmax, y2_val, X2_test_minmax, y2_test, dataset_name=\"df2\"):\n",
+    "    \"\"\"\n",
+    "    Skapar en ensemble-modell med VotingClassifier baserat på de bästa parametrarna\n",
+    "    från tidigare träning. Använder 'hard' voting (majoritetsröstning).\n",
+    "    \n",
+    "    Args:\n",
+    "        X2_train_minmax, y2_train: Träningsdata\n",
+    "        X2_val_minmax, y2_val: Valideringsdata\n",
+    "        X2_test_minmax, y2_test: Testdata\n",
+    "        dataset_name: Namnet på datasetet (default: \"df2\")\n",
+    "    \n",
+    "    Returns:\n",
+    "        ensemble_model: Den tränade ensemble-modellen\n",
+    "        accuracy: Noggrannhet på testdata\n",
+    "    \"\"\"\n",
+    "    # Ladda resultat från CSV-filen\n",
+    "    results_df = pd.read_csv('model_results.csv')\n",
+    "    \n",
+    "    # Filtrera resultat specifikt för df2\n",
+    "    df2_results = results_df[results_df['Model'].str.contains(dataset_name)]\n",
+    "    \n",
+    "    # Extrahera bästa parametrar för varje modell\n",
+    "    rf_params = eval(df2_results[df2_results['Model'].str.contains('Random Forest')]['Best Parameters'].values[0])\n",
+    "    lr_params = eval(df2_results[df2_results['Model'].str.contains('Logistic Regression')]['Best Parameters'].values[0])\n",
+    "    gb_params = eval(df2_results[df2_results['Model'].str.contains('Gradient Boosting')]['Best Parameters'].values[0])\n",
+    "    knn_params = eval(df2_results[df2_results['Model'].str.contains('KNN')]['Best Parameters'].values[0])\n",
+    "    \n",
+    "    # Lägg till random_state för modeller som stödjer det\n",
+    "    rf_params['random_state'] = 42\n",
+    "    lr_params['random_state'] = 42\n",
+    "    gb_params['random_state'] = 42\n",
+    "    \n",
+    "    # Skapa modeller med de extraherade parametrarna\n",
+    "    rf_best = RandomForestClassifier(**rf_params)\n",
+    "    lr_best = LogisticRegression(**lr_params)\n",
+    "    gb_best = GradientBoostingClassifier(**gb_params)\n",
+    "    knn_best = KNeighborsClassifier(**knn_params)\n",
+    "    \n",
+    "    # Kombinera tränings- och valideringsdata för att träna den slutliga modellen\n",
+    "    X2_train_combined = pd.concat([pd.DataFrame(X2_train_minmax), pd.DataFrame(X2_val_minmax)])\n",
+    "    y2_train_combined = pd.concat([pd.Series(y2_train), pd.Series(y2_val)])\n",
+    "    \n",
+    "    # Skapa VotingClassifier\n",
+    "    ensemble_model = VotingClassifier(\n",
+    "        estimators=[\n",
+    "            ('rf', rf_best),\n",
+    "            ('lr', lr_best),\n",
+    "            ('gb', gb_best),\n",
+    "            ('knn', knn_best)\n",
+    "        ],\n",
+    "        voting='hard'  # Använd majoritetsröstning\n",
+    "    )\n",
+    "    \n",
+    "    # Träna ensemble-modellen på kombinerad tränings- och valideringsdata\n",
+    "    print(f\"Tränar ensemble-modell med VotingClassifier på {dataset_name}...\")\n",
+    "    \n",
+    "    ensemble_model.fit(X2_train_combined, y2_train_combined)\n",
+    "    \n",
+    "    # Skapa en dictionary för att lagra individuella modeller\n",
+    "    individual_models = {\n",
+    "        'Random Forest': rf_best,\n",
+    "        'Logistic Regression': lr_best,\n",
+    "        'Gradient Boosting': gb_best,\n",
+    "        'KNN': knn_best\n",
+    "    }\n",
+    "    \n",
+    "    # Utvärdera individuella modeller och ensemble-modellen\n",
+    "    results = {'Modell': [], 'Noggrannhet': []}\n",
+    "    \n",
+    "    # Utvärdera individuella modeller\n",
+    "    print(\"\\nUtvärderar individuella modeller på df2-datasetet...\")\n",
+    "    for name, model in individual_models.items():\n",
+    "        model.fit(X2_train_combined, y2_train_combined)\n",
+    "        y2_pred = model.predict(X2_test_minmax)\n",
+    "        acc = accuracy_score(y2_test, y2_pred)\n",
+    "        results['Modell'].append(name)\n",
+    "        results['Noggrannhet'].append(acc)\n",
+    "        print(f\"{name}: {acc:.4f}\")\n",
+    "    \n",
+    "    # Utvärdera ensemble-modellen\n",
+    "    y2_test_pred = ensemble_model.predict(X2_test_minmax)\n",
+    "    test_accuracy = accuracy_score(y2_test, y2_test_pred)\n",
+    "    \n",
+    "    # Lägg till ensemble-resultatet\n",
+    "    results['Modell'].append('Ensemble (Voting)')\n",
+    "    results['Noggrannhet'].append(test_accuracy)\n",
+    "    \n",
+    "    print(f\"Ensemble-modell (VotingClassifier) på {dataset_name}:\")\n",
+    "    print(f\"Test Accuracy: {test_accuracy:.4f}\")\n",
+    "    \n",
+    "    # Ta bort den gamla filen om den finns\n",
+    "    filename = \"ensemble_model_results_df2.csv\"\n",
+    "    if os.path.exists(filename):\n",
+    "        try:\n",
+    "            os.remove(filename)\n",
+    "            print(f\"Gammal fil borttagen: {filename}\")\n",
+    "        except:\n",
+    "            print(f\"Kunde inte ta bort gammal fil: {filename}\")\n",
+    "    \n",
+    "    # Spara resultaten till CSV med det nya formatet\n",
+    "    results_df = pd.DataFrame(results)\n",
+    "    results_df.to_csv(filename, index=False)\n",
+    "    print(f\"Resultat sparade i {filename} med nytt format (Modell, Noggrannhet)\")\n",
+    "    \n",
+    "    return ensemble_model, test_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Ensemble_model_df2 import create_ensemble_model\n",
+    "\n",
+    "ensemble_model, test_accuracy = create_ensemble_model(\n",
+    "    X2_train_minmax,\n",
+    "    y2_train,\n",
+    "    X2_val_minmax,\n",
+    "    y2_val,\n",
+    "    X2_test_minmax,\n",
+    "    y2_test,\n",
+    "    dataset_name=\"df2\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, VotingClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def train_ensemble_model_df2(X2_train_minmax, X2_val_minmax, X2_test_minmax, \n",
+    "                            y2_train, y2_val, y2_test, \n",
+    "                            save_results=True, filename='ensemble_model_results_df2.csv'):\n",
+    "    \"\"\"\n",
+    "    Tränar en ensemble-modell med VotingClassifier för df2-datasetet.\n",
+    "    \n",
+    "    Parametrar:\n",
+    "    -----------\n",
+    "    X2_train_minmax : array-like\n",
+    "        Träningsdata för df2, normaliserad med MinMaxScaler\n",
+    "    X2_val_minmax : array-like\n",
+    "        Valideringsdata för df2, normaliserad med MinMaxScaler\n",
+    "    X2_test_minmax : array-like\n",
+    "        Testdata för df2, normaliserad med MinMaxScaler\n",
+    "    y2_train : array-like\n",
+    "        Målvariabel för träningsdata\n",
+    "    y2_val : array-like\n",
+    "        Målvariabel för valideringsdata\n",
+    "    y2_test : array-like\n",
+    "        Målvariabel för testdata\n",
+    "    save_results : bool, default=True\n",
+    "        Om True, sparas resultaten i en CSV-fil\n",
+    "    filename : str, default='ensemble_model_results_df2.csv'\n",
+    "        Filnamn för att spara resultaten\n",
+    "        \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    ensemble_model : VotingClassifier\n",
+    "        Den tränade ensemble-modellen\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Kombinera tränings- och valideringsdata\n",
+    "    X_train_val = np.vstack((X2_train_minmax, X2_val_minmax))\n",
+    "    y_train_val = np.concatenate((y2_train, y2_val))\n",
+    "    \n",
+    "    # Skapa individuella modeller med bästa parametrar\n",
+    "    rf_model = RandomForestClassifier(\n",
+    "        max_depth=10, \n",
+    "        min_samples_leaf=4, \n",
+    "        min_samples_split=10, \n",
+    "        n_estimators=30,\n",
+    "        random_state=42\n",
+    "    )\n",
+    "    \n",
+    "    lr_model = LogisticRegression(\n",
+    "        C=100, \n",
+    "        penalty='l2', \n",
+    "        solver='saga',\n",
+    "        random_state=42,\n",
+    "        max_iter=1000\n",
+    "    )\n",
+    "    \n",
+    "    gb_model = GradientBoostingClassifier(\n",
+    "        learning_rate=0.1, \n",
+    "        max_depth=5, \n",
+    "        n_estimators=30,\n",
+    "        random_state=42\n",
+    "    )\n",
+    "    \n",
+    "    knn_model = KNeighborsClassifier(\n",
+    "        n_neighbors=9, \n",
+    "        p=1, \n",
+    "        weights='uniform'\n",
+    "    )\n",
+    "    \n",
+    "    # Träna individuella modeller på kombinerad tränings- och valideringsdata\n",
+    "    rf_model.fit(X_train_val, y_train_val)\n",
+    "    lr_model.fit(X_train_val, y_train_val)\n",
+    "    gb_model.fit(X_train_val, y_train_val)\n",
+    "    knn_model.fit(X_train_val, y_train_val)\n",
+    "    \n",
+    "    # Skapa ensemble-modell med VotingClassifier\n",
+    "    ensemble_model = VotingClassifier(\n",
+    "        estimators=[\n",
+    "            ('rf', rf_model),\n",
+    "            ('lr', lr_model),\n",
+    "            ('gb', gb_model),\n",
+    "            ('knn', knn_model)\n",
+    "        ],\n",
+    "        voting='soft'  # Använd sannolikheter för röstning\n",
+    "    )\n",
+    "    \n",
+    "    # Träna ensemble-modellen på kombinerad tränings- och valideringsdata\n",
+    "    ensemble_model.fit(X_train_val, y_train_val)\n",
+    "    \n",
+    "    # Utvärdera modellerna på testdata\n",
+    "    rf_pred = rf_model.predict(X2_test_minmax)\n",
+    "    lr_pred = lr_model.predict(X2_test_minmax)\n",
+    "    gb_pred = gb_model.predict(X2_test_minmax)\n",
+    "    knn_pred = knn_model.predict(X2_test_minmax)\n",
+    "    ensemble_pred = ensemble_model.predict(X2_test_minmax)\n",
+    "    \n",
+    "    # Beräkna noggrannhet\n",
+    "    rf_accuracy = accuracy_score(y2_test, rf_pred)\n",
+    "    lr_accuracy = accuracy_score(y2_test, lr_pred)\n",
+    "    gb_accuracy = accuracy_score(y2_test, gb_pred)\n",
+    "    knn_accuracy = accuracy_score(y2_test, knn_pred)\n",
+    "    ensemble_accuracy = accuracy_score(y2_test, ensemble_pred)\n",
+    "    \n",
+    "    # Skapa resultatdataframe\n",
+    "    if save_results:\n",
+    "        results = {\n",
+    "            'Modell': ['Random Forest', 'Logistic Regression', 'Gradient Boosting', 'KNN', 'Ensemble (Voting)'],\n",
+    "            'Noggrannhet': [rf_accuracy, lr_accuracy, gb_accuracy, knn_accuracy, ensemble_accuracy]\n",
+    "        }\n",
+    "        \n",
+    "        results_df = pd.DataFrame(results)\n",
+    "        results_df.to_csv(filename, index=False)\n",
+    "        print(f\"Resultat sparade i {filename}\")\n",
+    "        \n",
+    "        # Skriv ut resultat\n",
+    "        print(\"\\nResultat på testdata:\")\n",
+    "        print(f\"Random Forest noggrannhet: {rf_accuracy:.4f}\")\n",
+    "        print(f\"Logistic Regression noggrannhet: {lr_accuracy:.4f}\")\n",
+    "        print(f\"Gradient Boosting noggrannhet: {gb_accuracy:.4f}\")\n",
+    "        print(f\"KNN noggrannhet: {knn_accuracy:.4f}\")\n",
+    "        print(f\"Ensemble (Voting) noggrannhet: {ensemble_accuracy:.4f}\")\n",
+    "    \n",
+    "    return ensemble_model\n",
+    "\n",
+    "# Exempel på användning:\n",
+    "# från Ensemble_model_df2 import train_ensemble_model_df2\n",
+    "# ensemble_model = train_ensemble_model_df2(X2_train_minmax, X2_val_minmax, X2_test_minmax, y2_train, y2_val, y2_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importera ensemble-modellen\n",
+    "from Ensemble_model_df2 import train_ensemble_model_df2\n",
+    "\n",
+    "# Kombinera tränings- och valideringsdata för att träna den slutliga modellen\n",
+    "ensemble_model = train_ensemble_model_df2(\n",
+    "    X2_train_minmax, X2_val_minmax, X2_test_minmax, \n",
+    "    y2_train, y2_val, y2_test\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
