--- a/Labb/Laboration_1_Medical_Prediction.ipynb
+++ b/Labb/Laboration_1_Medical_Prediction.ipynb
@@ -1046,21 +1046,21 @@
      "output_type": "stream",
      "text": [
       "Bästa parametrar för: Random Forest Normalization (df1): {'max_depth': 10, 'min_samples_leaf': 4, 'min_samples_split': 15, 'n_estimators': 20}\n",
-      "Modellen 'Random Forest Normalization (df1)' finns redan i filen. Inga nya resultat sparades.\n",
+      "Ny fil skapad: model_results.csv\n",
       "Bästa parametrar för: Random Forest Normalization (df2): {'max_depth': 10, 'min_samples_leaf': 4, 'min_samples_split': 15, 'n_estimators': 30}\n",
-      "Modellen 'Random Forest Normalization (df2)' finns redan i filen. Inga nya resultat sparades.\n",
+      "Nya resultat för 'Random Forest Normalization (df2)' sparades i model_results.csv.\n",
       "Bästa parametrar för: Logistic Regression Normalization (df1): {'C': 0.1, 'penalty': 'l1', 'solver': 'saga'}\n",
-      "Modellen 'Logistic Regression Normalization (df1)' finns redan i filen. Inga nya resultat sparades.\n",
+      "Nya resultat för 'Logistic Regression Normalization (df1)' sparades i model_results.csv.\n",
       "Bästa parametrar för: Logistic Regression Normalization (df2): {'C': 100, 'penalty': 'l1', 'solver': 'saga'}\n",
-      "Modellen 'Logistic Regression Normalization (df2)' finns redan i filen. Inga nya resultat sparades.\n",
+      "Nya resultat för 'Logistic Regression Normalization (df2)' sparades i model_results.csv.\n",
       "Bästa parametrar för: Gradient Boosting Normalization (df1): {'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 30}\n",
-      "Modellen 'Gradient Boosting Normalization (df1)' finns redan i filen. Inga nya resultat sparades.\n",
+      "Nya resultat för 'Gradient Boosting Normalization (df1)' sparades i model_results.csv.\n",
       "Bästa parametrar för: Gradient Boosting Normalization (df2): {'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 30}\n",
-      "Modellen 'Gradient Boosting Normalization (df2)' finns redan i filen. Inga nya resultat sparades.\n",
+      "Nya resultat för 'Gradient Boosting Normalization (df2)' sparades i model_results.csv.\n",
       "Bästa parametrar för: KNN Normalization (df1): {'n_neighbors': 9, 'p': 2, 'weights': 'uniform'}\n",
-      "Modellen 'KNN Normalization (df1)' finns redan i filen. Inga nya resultat sparades.\n",
+      "Nya resultat för 'KNN Normalization (df1)' sparades i model_results.csv.\n",
       "Bästa parametrar för: KNN Normalization (df2): {'n_neighbors': 9, 'p': 1, 'weights': 'uniform'}\n",
-      "Modellen 'KNN Normalization (df2)' finns redan i filen. Inga nya resultat sparades.\n"
+      "Nya resultat för 'KNN Normalization (df2)' sparades i model_results.csv.\n"
      ]
     }
    ],
@@ -1103,11 +1103,11 @@
       "Resultat sparade i ensemble_model_results_df2.csv\n",
       "\n",
       "Resultat på testdata:\n",
-      "Random Forest noggrannhet: 0.7410\n",
+      "Random Forest noggrannhet: 0.7420\n",
       "Logistic Regression noggrannhet: 0.7334\n",
       "Gradient Boosting noggrannhet: 0.7453\n",
       "KNN noggrannhet: 0.7082\n",
-      "Ensemble (Voting) noggrannhet: 0.7422\n"
+      "Ensemble (Voting) noggrannhet: 0.7410\n"
      ]
     }
    ],
