nu sista uppdatering, nu helg

--- a/Labb/Laboration_1_Medical_Prediction.ipynb
+++ b/Labb/Laboration_1_Medical_Prediction.ipynb
@@ -706,7 +706,6 @@
    "source": [
     "## Visualiseringar korrelation\n",
     "\n",
-    "Korrelationer sträcker sig från -1.0 till 1.0. \n",
     "\n",
     "**Positiv korrelation:**\n",
     "Två variabler med en korrelation på 1.0, rör sig tillsammans i samma riktning hela tiden och anses vara en perfekt positiv korrelation. Ex. \"Du bör träna mer för det hjälper dig att bli fysiskt starkare\". Det tyder på en positiv korrelation. Ju mer du tränar dessto mer förväntas du öka i styrka. Rör sig tillsammans i positiv riktning.\n",
@@ -714,49 +713,10 @@
     "**Negativ korrelation:**\n",
     "Då den ena variablen ökar så minskas den andra variablen. En stark negativ korrelation är -1. Man kan säga att det finns ett orsakssamband, där den ena variablen är orsaken att den andra förändras. Rör sig tillsammans i negativ riktning.\n",
     "\n",
-    "**Noll värde:**\n",
-    "Om värdet är nära noll så är korrelationen mycket svag/obefintlig.\n",
     "\n",
-    "#### **Analys av Korrelationsheatmap:**\n",
-    "Jag väljer att analyser dom värden som sticker ut från heatmapen. Dom värden som är 1.0 är värden som redan beräknas på samma sak. ex. age vs age och rör sig redan i samma positiva riktning.\n",
+    "## Korrelationsanalys \n",
     "\n",
-    "1. **Längd och Kön:**\n",
-    " - Korrelation på 0.52, måttligt positiv.\n",
-    " - Män har generellt högre medellängd än kvinnor. Därmed finns det en viss korrelation mellan kön och längd. \n",
-    "\n",
-    " 2. **Längd och vikt:**\n",
-    " - Korrelation på 0.32, svag positiv.\n",
-    " - Längre personer har generellt mer kroppsvolym än kortare människor och väger generellt sätt mer.\n",
-    "\n",
-    " 3. **Högt och lågt blodtryck:**\n",
-    " - Korrelation på 0.70, stark positiv.\n",
-    " - Det låga blodtrycker och höga blodtrycket påverkas av samma faktorer då mätningarna påverkas av samma fysiologiska processer och riskfaktorer. Högt blodtryck påverkar både systoliskt och diastoliskt tryck.\n",
-    "\n",
-    " 4. **Vikt och BMI:**\n",
-    " - Korrelation på 0.86, Mycket stark positiv. \n",
-    " - Direkt matematisk relation då BMI beräknas från vikt och längd.\n",
-    " - Ju högre vikt man har jämfört med sin längd så leder det till högt BMI. BMI i sig kan dock vara missvisande om du exempelvis är tyngdlyftare eller elitidrottar. Då är det väldigt vanligt att du har ett högt BMI. Dock är det höga BMI resultatet i det fallet oftast ofarligt.\n",
-    "\n",
-    " 5. **Kolestrol och Blodsocker:**\n",
-    " - Korrelation på 0.45, måttligt positiv.\n",
-    " - Båda påverkas av samma faktorer exempelvis livsstil.\n",
-    " - Hög kolestrol kan gå i samma riktning med högt blodsocker.\n",
-    "\n",
-    "6. **Rökning och Alkohol:**\n",
-    "- Korrelation på 0.34, svag positiv.\n",
-    "- Livstilsvanor. Kan ha en påverkan av sociala faktorer där det förekommer tillsammans.\n",
-    "- Rökning och alkohol kan påverka varandra i kroppen.\n",
-    "\n",
-    "7. **Längd och BMI:**\n",
-    "- Korrelation på -0.19, svag negativ.\n",
-    "- Matematisk realation som påverkas av längden. vikt/längd*längd\n",
-    "- Längre personer har lägre BMI på grund av att kroppsvolymen/längden sprider ut vikten. Exempelvis en lång person med samma vikt som en kort person kommer att ha ett lägre BMI.\n",
-    "\n",
-    "8. **Cardio och högt blodtryck:**\n",
-    "- Korrelation 0.43, måttligt positiv.\n",
-    "- Högt blodtryck är en välkänd riskfaktor för hjärt- och kärlsjukdomar.\n",
-    "- Påverkar hjärtats arbete och blodkärl. Har ett medicinskt samband och riskfaktor.\n",
-    "- 0.43 av variationen i andelen sjuka personer kan förklaras av blodtryck.\n"
+    "I min analys av korrelationer, som sträcker sig från -1.0 till 1.0, undersöker jag hur olika variabler i datasetet förhåller sig till varandra där positiva värden visar att variablerna rör sig i samma riktning medan negativa värden indikerar motsatt riktning. Min heatmap avslöjar flera intressanta samband där de starkaste positiva korrelationerna finns mellan vikt och BMI (0.86) samt mellan högt och lågt blodtryck (0.70), vilket är förväntat eftersom BMI beräknas direkt från vikt och längd medan blodtrycksvärdena påverkas av samma fysiologiska processer. Måttligt positiva korrelationer hittar jag mellan längd och kön (0.52), kolesterol och blodsocker (0.45) samt mellan hjärt-kärlsjukdom och högt blodtryck (0.43), där den sistnämnda är särskilt viktig eftersom den bekräftar högt blodtryck som en betydande riskfaktor för hjärtsjukdom. Svagare positiva samband finns mellan längd och vikt (0.32) samt rökning och alkohol (0.34), medan det enda svaga negativa sambandet är mellan längd och BMI (-0.19), vilket förklaras av att längre personer tenderar att ha lägre BMI när vikten är konstant på grund av hur BMI beräknas.\n"
    ]
   },
   {
